# backend-admin-fiap

./: .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: code-web-app_api-admin-fiap.yml
alembic/: env.py
alembic/versions/: 86e9e2462ce1_first.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: administrators.py  endpoint_roles.py  endpoints.py  login.py  roles.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_administrator.py  crud_endpoint.py  crud_endpoint_role.py  crud_role.py
app/db/: base.py  init_db.py
app/models/: __init__.py  administrator.py  endpoint.py  endpoint_role.py  role.py
app/schemas/: __init__.py  administrator.py  endpoint.py  endpoint_role.py  role.py
